# godot-voip

./: .gitattributes  .gitignore  Control.tscn  LICENSE  Network.gd  README.md  project.godot  voip.gd
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.import/: icon.png-487276ed1e3a0c39cad0279d744ee560.md5  icon.png-487276ed1e3a0c39cad0279d744ee560.stex
addons/godot-voip/: icon.png.import  icon.svg.import  icon_old.png.import  plugin.cfg  plugin.gd
addons/godot-voip-csharp/: Plugin.cs  plugin.cfg
addons/godot-voip-csharp/demo/: Demo.cs  Demo.tscn  Network.cs
addons/godot-voip-csharp/icons/: VoiceInstance.svg.import  VoiceOrchestrator.svg.import
addons/godot-voip-csharp/scripts/: VoiceInstance.cs  VoiceMic.cs  VoiceOrchestrator.cs
addons/godot-voip/demo/: Demo.tscn  Network.gd
addons/godot-voip/gdnative/: godot-voip-native.tres  godot-voip.tres  native_voice_instance.gdns
addons/godot-voip/gdnative/src/: lib.rs
addons/godot-voip/gdnative/src/voice_instance/: mic.rs  node.rs  voice.rs
addons/godot-voip/icons/: NativeVoiceInstance.svg.import  VoiceInstance.svg.import  VoiceOrchestrator.svg.import  VoipInstance.svg.import
addons/godot-voip/rust/: Cargo.toml
addons/godot-voip/rust/src/: lib.rs  voice_instance.rs
addons/godot-voip/rust/src/voice_instance/: mod.rs
addons/godot-voip/scripts/: godot-voip.tres  native_voice_instance.gdns  voice_instance.gd  voice_instance.gdns  voice_mic.gd  voice_orchestrator.gd  voip_instance.gd  voip_mic.gd  voip_microphone.gd
addons/godot-voip/voip/: voip.gd  voip_instance.gd  voip_microphone.gd
