[package]
name = "godot-voip"
version = "0.1.0"
edition = "2021"
authors = ["Cas Brugman <brug.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type= ["cdylib"]

[dependencies]
gdnative = {git = "https://github.com/godot-rust/godot-rust", commit = "deb9dbfd413f8ac751a2267be010b2089ff26d50"}
